--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hui & Tai's Wedding</title>
+    <title>Tai & Hui's Wedding</title>
   </head>
   <body>
     <div id="root"></div>
